# WordCounter

./: CMakeLists.txt  README.md  README.txt  sequence.cpp
WordCounter/: counter.cpp  counter.hpp  main.cpp  parallel.cpp  parallel.hpp  sequence.hpp
WordCounter/resources/: hobit.txt  lotr1.txt  lotr3.txt  test1.txt  test2.txt
WordCounter/spec/: data.xlsx  wordcounter_spec_Karsch.docx
WordCounter/spec/oldData/: wordcounter_spec_Karsch.docx
compilated/: README.txt
resources/: lotr2.txt  test3.txt
